--- a/style.css
+++ b/style.css
@@ -14,6 +14,51 @@ body{
 #sidebar{
     background-color: #0f172a;
     grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: 40px 1fr 1fr;
+    gap: 50px;
+    padding: 15px;
+    color: #e2e8f0;
+}
+
+#dashboard-title{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+#dashboard-title img{
+    width: 40px;
+    height: 40px;
+    filter: invert(90%);
+}
+
+#dashboard-title p{
+    font-size: 36px;
+    margin: 0;
+
+}
+
+#pages #settings{
+    display: grid;
+    grid-template-rows: repeat(auto-fill,30px);
+    font-size: 14;
+    font-weight: bold;
+}
+
+.page{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 10px;
+}
+
+.settings{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 10px;
 }
 
 #header{
@@ -82,6 +127,10 @@ body{
 .icon{
     width: 20px;
     height: 20px;
+}
+
+#sidebar .icon{
+    filter: invert(90%);
 }
 
 #info-container{
