--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     grid-template-rows: 40px 1fr 1fr;
     gap: 50px;
     padding: 15px;
+    padding-bottom: 50px;
     color: #e2e8f0;
 }
 
@@ -64,9 +65,83 @@ body{
 #header{
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-rows: 50%;
+    grid-template-rows: 40% 60%;
     background-color: #f8fafc;
     grid-column: 2 / 4;
+    color: #020617;
+    padding: 15px;
+}
+
+#search-bar{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 15px
+}
+
+#search-bar :last-child{
+    height: 20px;
+    width: min(400px,80%);
+    border-radius: 10px;
+    background-color: #cbd5e1;
+    border: none;
+}
+
+#notifications{
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 5%;
+}
+
+#user{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 15px;
+}
+
+#greeting{
+    display: flex;
+    flex-direction: column;
+}
+
+#greeting p{
+    font-size: 12px;
+    margin-top: 0;
+}
+
+#greeting h1{
+    font-size: 20px;
+    margin: 0;
+}
+
+#links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.link{
+    height: 20px;
+    background-color: #334155;
+    border-radius: 13px;
+    color: #e2e8f0;
+    padding: 3px 13px;
+}
+
+.avatar{
+    background-color: #cbd5e1;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+#user-avatar{
+    width: 60px;
+    height: 60px;
 }
 
 #projects-container{
@@ -74,6 +149,7 @@ body{
     display: grid;
     grid-template-rows: 10% 90%;
     padding: 15px;
+    padding-bottom: 50px;
 }
 
 #projects-window{
@@ -138,7 +214,7 @@ body{
     display: grid;
     grid-template-rows: 50%;
     padding-right: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 50px;
 }
 
 #announcements-container, #trending-container{
@@ -150,4 +226,6 @@ body{
     border-radius: 10px;
     background-color: #f8fafc;
 }
+
+
 
