--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
 #container{
     display: grid;
     height: 100%;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 20vh 80vh;
 }
 
 #sidebar{
@@ -36,14 +36,14 @@ body{
 }
 
 #dashboard-title p{
-    font-size: 36px;
+    font-size: 24px;
     margin: 0;
 
 }
 
-#pages #settings{
+#pages, #settings{
     display: grid;
-    grid-template-rows: repeat(auto-fill,30px);
+    grid-template-rows: repeat(auto-fill, 40px);
     font-size: 14;
     font-weight: bold;
 }
@@ -55,6 +55,14 @@ body{
     gap: 10px;
 }
 
+.page p{
+    margin: 0;
+}
+
+.settings p{
+    margin: 0;
+}
+
 .settings{
     display: flex;
     justify-content: left;
@@ -64,7 +72,7 @@ body{
 
 #header{
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 60% 40%;
     grid-template-rows: 40% 60%;
     background-color: #f8fafc;
     grid-column: 2 / 4;
@@ -147,9 +155,16 @@ body{
 #projects-container{
     background-color: #94a3b8;
     display: grid;
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 20px auto;
     padding: 15px;
     padding-bottom: 50px;
+    gap: 15px;
+}
+
+.section-title{
+    margin: 0;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 #projects-window{
@@ -158,11 +173,12 @@ body{
 
 #projects{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
     gap: 15px;
 }
 
 .project{
+    height: 250px;
     display: grid;
     grid-template-rows: 1fr 4fr 1fr;
     grid-template-columns: 1fr 10px;
@@ -203,6 +219,12 @@ body{
 .icon{
     width: 20px;
     height: 20px;
+    color: #020617;
+}
+
+.lang-icon{
+    width: 20px;
+    height: 20px;
 }
 
 #sidebar .icon{
@@ -212,20 +234,45 @@ body{
 #info-container{
     background-color: #94a3b8;
     display: grid;
-    grid-template-rows: 50%;
+    grid-template-rows: 1fr 1fr;
     padding-right: 15px;
     padding-bottom: 50px;
+    padding-top: 15px;
+    gap: 15px;
 }
 
-#announcements-container, #trending-container{
+#skills-container, #trending-container{
     display: grid;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 20px 1fr;
+    gap: 15px;
 }
 
-#announcements, #trending{
+#skills, #trending{
     border-radius: 10px;
     background-color: #f8fafc;
+    padding: 15px;
+    display: grid;
+    gap: 15px
 }
 
+#skills{
+    grid-template-rows: repeat(4,20px);
+}
 
+#trending{
+    grid-template-rows: repeat(4,40px);
+}
 
+.user-post{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 5px;
+}
+
+.post p{
+    margin: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
