--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
     height: 100vh;
     margin: 0;
     padding: 0;
+    font-family: "Michroma", sans-serif;
+    font-size: 12px;
 }
 
 #container{
@@ -37,7 +39,7 @@ body{
 }
 
 #dashboard-title p{
-    font-size: 24px;
+    font-size: 20px;
     margin: 0;
 
 }
@@ -45,7 +47,7 @@ body{
 #pages, #settings{
     display: grid;
     grid-template-rows: repeat(auto-fill, 40px);
-    font-size: 14;
+    font-size: 12;
     font-weight: bold;
 }
 
@@ -119,12 +121,12 @@ body{
 }
 
 #greeting p{
-    font-size: 12px;
+    font-size: 10px;
     margin: 0;
 }
 
 #greeting h1{
-    font-size: 20px;
+    font-size: 18px;
     margin: 0;
 }
 
@@ -142,6 +144,11 @@ body{
     border-radius: 13px;
     color: #e2e8f0;
     padding: 3px 13px;
+}
+
+.link:hover{
+    transform: scale(1.1);
+    background-color: #64748b;
 }
 
 .avatar{
@@ -168,13 +175,14 @@ body{
 
 .section-title{
     margin: 0;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 600;
 }
 
 /* Hide overflown objects and allow vertical scrolling  */
 #projects-window{
     overflow-y: auto;
+    border-radius: 10px;
 }
 
 #projects{
@@ -211,24 +219,32 @@ body{
 }
 
 .project-image-container{
-    background-color: #0f172a;
     border-radius: 5px;
     margin-right: 10px;
+    overflow: hidden;
+}
+
+.project-image{
+    width: 100%;
 }
 
 .icons-container{
     display: flex;
     justify-content: right;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     margin-right: 10px;
 }
 
 .icon{
     width: 20px;
     height: 20px;
-    color: #020617;
 }
+
+.icon:hover{
+    transform: scale(1.25);
+}
+
 
 .lang-icon{
     width: 20px;
