--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ body{
 .project{
     height: 250px;
     display: grid;
-    grid-template-rows: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
     grid-template-columns: 1fr 10px;
     border-radius: 10px;
     background-color: #f8fafc;
@@ -222,10 +222,14 @@ body{
     border-radius: 5px;
     margin-right: 10px;
     overflow: hidden;
+    display:flex;
+    justify-content: center;
+    /* background-color: #0f172a; */
 }
 
 .project-image{
-    width: 100%;
+    height: 100%;
+    border-radius: 5px;
 }
 
 .icons-container{
